// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CardStyle 1`] = `
<View
  style={
    Array [
      Object {
        "padding": 5,
        "paddingBottom": 5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderColor": "rgb(217, 217, 217)",
        "borderRadius": 10,
        "elevation": 1,
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <Text>
      Test
    </Text>
  </View>
</View>
`;

exports[`should render CardStyle with title 1`] = `
<View
  style={
    Array [
      Object {
        "padding": 5,
        "paddingBottom": 5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderColor": "rgb(217, 217, 217)",
        "borderRadius": 10,
        "elevation": 1,
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "rgb(217, 217, 217)",
          "borderBottomWidth": 2,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgb(51, 51, 51)",
            "fontSize": 18,
            "fontWeight": "bold",
            "padding": 16,
          }
        }
      >
        Test title
         
        <Text
          style={
            Object {
              "fontSize": 14,
              "fontWeight": "normal",
              "marginLeft": 16,
            }
          }
        />
      </Text>
    </View>
    <Text>
      Test
    </Text>
  </View>
</View>
`;
